correct data store in skills.json, css fixes

--- a/src/app/components/card/card-body/CardBody.module.scss
+++ b/src/app/components/card/card-body/CardBody.module.scss
@@ -21,7 +21,7 @@ $gap: 20px;
     display: flex;
     margin-left: toRem(30px);
     align-items: center;
-
+    flex: 1;
     &--edit {
       align-items: flex-start;
     }
@@ -60,6 +60,7 @@ $gap: 20px;
     &__textarea {
       padding: toRem(0px 30px);
     }
+ 
   }
 }
 
