--- a/src/app/components/card/Card.module.scss
+++ b/src/app/components/card/Card.module.scss
@@ -2,12 +2,14 @@
 
 .card {
   height: toRem(58px);
+  width: 100%;
   overflow: hidden;
   padding: toRem(0px 20px);
   background-color: white;
   box-shadow: var(--box-shadow);
   border-radius: var(--button-border-radius);
   font-size: toRem(14px);
+   
 
   & + .card {
     margin-top: toRem(15px);
@@ -20,6 +22,7 @@
 
   &__footer {
     margin-top: toRem(24px);
+   
   }
 }
 
