--- a/src/app/components/category-list/CategoryList.module.scss
+++ b/src/app/components/category-list/CategoryList.module.scss
@@ -9,7 +9,7 @@
     width: 100%;
     margin-top: toRem(10px);
 
-    .categories-list__button {
+    &-button {
       justify-content: space-between;
       text-decoration: none;
     }
