--- a/src/app/components/search-card/SearchCard.module.scss
+++ b/src/app/components/search-card/SearchCard.module.scss
@@ -4,7 +4,7 @@
   padding: toRem(20px);
   background-color: white;
 
-  color: var(--color-primary);
+  color: $color-primary;
 
   box-shadow: $box-shadow;
   border-radius: $border-radius;
