--- a/src/app/categories/[id]/page.module.scss
+++ b/src/app/categories/[id]/page.module.scss
@@ -15,7 +15,7 @@
   flex-wrap: wrap;
 
   &__heading {
-    color: var(--color-secondary-dark);
+    color: $color-secondary-dark;
   }
 
   &__btn {
