--- a/src/app/components/label/Label.module.scss
+++ b/src/app/components/label/Label.module.scss
@@ -4,5 +4,5 @@
   padding: toRem(0px 0px 4px 5px);
   font-size: toRem(12px);
   display: inline-block;
-  color: var(--color-secondary);
+  color: $color-secondary;
 }
