--- a/src/app/login/page.module.scss
+++ b/src/app/login/page.module.scss
@@ -1,7 +1,7 @@
 @import "../styles/index.scss";
 
 .login-page {
-  background-color: var(--color-primary);
+  background-color: $color-primary;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -73,7 +73,7 @@
   }
 
   &__bottom-text {
-    color: var(--color-secondary);
+    color: $color-secondary;
     font-size: toRem(12px);
     text-align: center;
     line-height: 1.5;
